# Pedro

./: README.md  pyproject.toml
examples/: basic_usage.py  batch_usage.py
src/pedro/: Pedro.py  __init__.py  backends.py
src/pedro/utils/: knn.py  plotting.py
